--- a/examples/src/main/webapp/Fire.html
+++ b/examples/src/main/webapp/Fire.html
@@ -10,6 +10,7 @@
     <!-- three.js -->
     <script type="text/javascript" language="javascript" src="js/three.js"></script>
     <script type="text/javascript" language="javascript" src="js/VolumetricFire.js"></script>
+    <script type="text/javascript" language="javascript" src="js/VolumetricFire.js"></script>
     <script type="text/javascript" language="javascript" src="examples/examples.nocache.js"></script>
   </head>
 
